# django-base

./: .coveragerc  .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
django_base/: admin.py  models.py
example_project/example_app/: __init__.py  admin.py  apps.py  models.py  signals.py  views.py
example_project/example_app/migrations/: 0001_initial.py  0002_add_simple_history.py  0002_historicalexamplemodel.py  0002_image_generic_m2m_relation.py  0003_add_field_uuid.py  0003_remove_mmimage.py  0004_add_text_field.py  0004_move_models_to_src.py  0005_change_text_to_tinymce.py
example_project/example_project/: settings.py  urls.py
src/django_base/: __init__.py  admin.py  apps.py  models.py  version.py  views.py
src/django_base/migrations/: 0001_initial.py
tests/: test_.py  test_admin.py  test_models.py  test_settings.py
tests/test_app/: admin.py  models.py
tests/test_app/migrations/: 0001_initial.py  0002_add_simple_history.py  0002_historicaltestmodel.py  0003_add_uuid.py
