[metadata]
name = django-base
version = 0.4.0
description = Django reusable base app
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-base
author = Genos Ltd
author_email = grazdorov@genos.hr
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
packages = find:
install_requires =
    django >= 3.1
    django-comment @ git+https://github.com/genosltd/django-comment@latest
    django-hashtag @ git+https://github.com/genosltd/django-hashtag@latest
    django-simple-history
python_requires = >=3.6, <4
