[metadata]
name = django-base
description = Django Base
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-base
author = Genos Ltd
author_email = grazdorov@genos.hr
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    django ~= 3.2
    django-simple-history
python_requires = >=3.7, <4

[options.packages.find]
where = src
